Fixed an issue with toast overlapping topbar

--- a/src/less/components/toast.less
+++ b/src/less/components/toast.less
@@ -8,7 +8,7 @@
     @media screen and (min-width: @screen-sm-min) {
         min-width: initial;
         bottom: initial;
-        top: 1%;
+        top: 5rem;
         right: 1%;
         max-width: 86%;
     }
